published Homepage after 50th

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -17,11 +17,6 @@
     <title>Metropolitan State University of Denver</title>
 <meta name="Description" content="Metropolitan State University of Denver is a fully accredited university offering various bachelor's and master's degrees in downtown Denver, Colorado.">
 <!-- Meta Data -->
-<meta name="og:title" content="Metropolitan State University of Denver" />
- <meta name="og:description" content="Metropolitan State University of Denver is a fully accredited university offering various bachelor&rsquo;s and master&rsquo;s degrees in downtown Denver, Colorado." />
- <meta name="description" content="Metropolitan State University of Denver is a fully accredited university offering various bachelor&rsquo;s and master&rsquo;s degrees in downtown Denver, Colorado." />
- <meta name="keywords" content="denver, colorado, college, university, degree, masters" />
- <meta name="author" content="Metropolitan State University of Denver" />
 
 <meta name="google-site-verification" content="W3RS-MX1q0fLm2k731Ymz8fNmTCdPEizDE5Vzb9ZuoE" />
 <meta name="bitly-verification" content="b1f80533a28e"/>
@@ -51,7 +46,6 @@
 
 <!-- HeaderCode -->
 
-
 </head>
 
 <body>
@@ -77,7 +71,7 @@
                         <span class="sr-only">Toggle quick links navigation</span>
                         <span class="fa fa-bars"></span>
                     </button>
-                    <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
+                    <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu/media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
 
                 </div>
 
@@ -407,18 +401,94 @@ Celebration of MSU Denver's <br>
     </div>
     <!-- ENDS FOOTER -->
 
+
+<style>
+div#lhnContainerDone {display: none;}
+.footer .fa {padding: 0px 5px;}
+.footer .fa-2x {font-size: 1.75em;}
+</style>
+<!-- This code must be installed within the body tags -->
+<script type="text/javascript">
+    var lhnAccountN = "29468-1";
+    var lhnButtonN = 0;
+    var lhnChatPosition = 'default';
+    var lhnDepartmentN = 0;
+    var lhnWindowN = 33133;
+</script>
+<script src="//www.livehelpnow.net/lhn/widgets/chatbutton/lhnchatbutton-current.min.js" type="text/javascript" id="lhnscript"></script>
+
+                  <SCRIPT>
+function CustomOpenLHNChat(){
+if (typeof lhnWin !== 'undefined' && lhnWin){
+
+if (!lhnWin.closed){
+
+lhnWin.blur();
+
+setTimeout(lhnWin.focus(), 10);
+
+return false;
+
+}
+
+}
+
+
+var wleft = (screen.width - 580-32) / 2;
+var wtop = (screen.height - 420 - 96) / 2;
+lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=29468', 'lhnchat', 'left=' + wleft + ',top=' + wtop +',width=580,height=435,toolbar=no,location=no,directories=no,status=yes,menubar=no,scrollbars=no,copyhistory=no,resizable=yes');
+}
+</SCRIPT>
+
+
+
+                  <style>div#lhnContainerDone {display: none;} </style>
+
+<!-- BEGINS SECOND DEPENDENCY INCLUDE -->
+<!-- sidemenu.js  -->
+<script type="text/javascript" src="https://msudenver.eduhttps://msudenver.edu/media/prod/js/sidemenu.js"></script>
+<!-- modernizr -->
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
+<!-- bootstrap.js -->
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- console.polyfill -->
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
+<!-- main.min.js -->
+<script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
+<!-- match.min.js -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
+
+
+<!-- matchHeight -->
+        <script type="text/javascript">
+            (function() {
+
+                $(function() {
+                    // apply your matchHeight on DOM ready (they will be automatically re-applied on load or resize)
+
+                    // get test settings
+                    var byRow = $('body').hasClass('.panel-links');
+
+                    // apply matchHeight to each item container's items
+                    $('.items-container').each(function() {
+                        $(this).find('.item').matchHeight({
+                            byRow: byRow
+                        });
+                    });
+                });
+            })();
+        </script>
+
+<!-- FooterCode -->
+
+
 <!-- CDN JS Files -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
 <!-- JS Files -->
-<!-- modernizr --><t4 type="media" id="70442" />
-<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
-<!-- console.polyfill --><t4 type="media" id="70439" />
-<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
-<!-- main.min.js --><t4 type="media" id="70445" />
-<script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
-<!-- FooterCode -->
+
+
     <script>
     $(function(){
     $(".dropdown").hover(
@@ -433,6 +503,8 @@ Celebration of MSU Denver's <br>
                 $('b', this).toggleClass("caret caret-up");
             });
     });
+
+
 </script>
 
         <!-- matchHeight -->
@@ -459,6 +531,7 @@ Celebration of MSU Denver's <br>
    					interval: 6500
   						});
 			</script>
+
 
 </body>
 
