begin formatting first 2 columns of footer

--- a/homepage.html
+++ b/homepage.html
@@ -373,6 +373,32 @@ Celebration of MSU Denver's <br>
     <div class="container-fluid">
         <div class="row footer">
           <div class="container">
+          <div class="col-lg-3">
+            <p>
+              <a href="/">About</a><br>
+              <hr />
+              <a href="/">Degree Programs</a><br>
+              <hr/>
+              <a href="/">Cost</a><br>
+              <hr/>
+              <a href="/">Financial Aid</a><br>
+              <hr/>
+              <a href="/">Bookstore</a>
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <p>
+              <a href="/">Tours</a><br>
+              <hr/>
+              <a href="/">Directions</a><br>
+              <hr/>
+              <a href="/">Parking</a><br>
+              <hr/>
+              <a href="/">Careers</a><br>
+              <hr/>
+              <a href="/">Safety</a>
+            </p>
+          </div>
           <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 campus-info">
                 <p>
                   <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
