--- a/homepage.html
+++ b/homepage.html
@@ -370,56 +370,18 @@ Celebration of MSU Denver's <br>
 
 <!-- Footer NAV ID -->
 <!-- BEGINS  FOOTER -->
-    <div class="container-fluid">
-        <div class="row footer">
-          <div class="container">
+<div class="container-fluid">
+    <div class="row footer">
+      <div class="container">
 
-            <div class="col-lg-4 col-lg-push-4 social campus-info">
-                  <p>
-                    <a href="/"><strong>Metropolitan State University of Denver</strong></a><br><br>
-                    <a href="/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
-                    <a href="tel:303-556-5740"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a><br><br>
-                    <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
-                  </p>
-                  <i class="social-non-mobile">
-                   <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-                   <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
-                   <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-                   <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-                   <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
-                   <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
-                 </i>
-            </div>
-
-            <div class="col-lg-4 col-lg-pull-4 footer-menu">
-              <div class="col-lg-6">
-                <p>
-                  <a href="/">About</a><br>
-                  <hr />
-                  <a href="/">Degree Programs</a><br>
-                  <hr/>
-                  <a href="/">Cost</a><br>
-                  <hr/>
-                  <a href="/">Financial Aid</a><br>
-                  <hr/>
-                  <a href="/">Bookstore</a>
-                  <hr class="hide-hr"/>
-                </p>
-              </div>
-              <div class="col-lg-6">
-                <p>
-                  <a href="/">Tours</a><br>
-                  <hr/>
-                  <a href="/">Directions</a><br>
-                  <hr/>
-                  <a href="/">Parking</a><br>
-                  <hr/>
-                  <a href="/">Careers</a><br>
-                  <hr/>
-                  <a href="/">Safety</a>
-                </p>
-              </div>
-              <i class="social-mobile">
+        <div class="col-sm-6 col-md-6 col-lg-4 social campus-info mobile-msuinfo-show">
+              <p>
+                <a href="/"><strong>Metropolitan State University of Denver</strong></a><br><br>
+                <a href="/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
+                <a href="tel:303-556-5740"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a><br><br>
+                <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
+              </p>
+              <i class="social-non-mobile">
                <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
                <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
                <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
@@ -427,18 +389,73 @@ Celebration of MSU Denver's <br>
                <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
                <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
              </i>
-
-            </div>
-
-            <div class="col-lg-4 footer-logo">
-              <img src="http://msudenver.edu/media/assets/homepagespring2016/MSU-Denverlogo_blunav.png"><br><br>
-              <a class="t4Edit-page campus-info" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=30947&amp;chid=1&amp;lang=en&amp;ede=true"><small>&copy;</small></a><a><small> MSU Denver -</small></a>
-              <a href="/privacy"><small>Privacy, Terms and Conditions</small></a> <br>
-              <br>
-            </div>
-          </div>
         </div>
+
+        <div class="col-sm-12 col-md-12 col-lg-4 footer-menu">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <p>
+                <a href="/">About</a><br>
+                <hr />
+                <a href="/">Degree Programs</a><br>
+                <hr/>
+                <a href="/">Cost</a><br>
+                <hr/>
+                <a href="/">Financial Aid</a><br>
+                <hr/>
+                <a href="/">Bookstore</a>
+                <hr class="hide-hr"/>
+              </p>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <p>
+                <a href="/">Tours</a><br>
+                <hr/>
+                <a href="/">Directions</a><br>
+                <hr/>
+                <a href="/">Parking</a><br>
+                <hr/>
+                <a href="/">Careers</a><br>
+                <hr/>
+                <a href="/">Safety</a>
+              </p>
+            </div>
+            <br/><br/>
+            <i class="social-mobile">
+             <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+             <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+             <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+             <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+             <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
+             <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
+            </i>
+            <br/><br/>            
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-4 social campus-info desktop-msuinfo-show">
+              <p>
+                <a href="/"><strong>Metropolitan State University of Denver</strong></a><br><br>
+                <a href="/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
+                <a href="tel:303-556-5740"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a><br><br>
+                <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
+              </p>
+              <i class="social-non-mobile">
+               <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+               <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+               <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+               <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+               <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
+               <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
+             </i>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 footer-logo">
+          <img src="http://msudenver.edu/media/assets/homepagespring2016/MSU-Denverlogo_blunav.png"><br><br>
+          <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=30947&amp;chid=1&amp;lang=en&amp;ede=true"><small>&copy;</small></a><a><small> MSU Denver -</small></a>
+          <a href="/privacy"><small>Privacy, Terms and Conditions</small></a> <br>
+          <br>
+        </div>
+      </div>
     </div>
+</div>
     <!-- ENDS FOOTER -->
 
 
