fix border, add correct logo

--- a/homepage.html
+++ b/homepage.html
@@ -428,7 +428,7 @@ Celebration of MSU Denver's <br>
              <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
              <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
             </i>
-            <br/><br/>            
+            <br/><br/>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-4 social campus-info desktop-msuinfo-show">
               <p>
@@ -448,7 +448,7 @@ Celebration of MSU Denver's <br>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 footer-logo">
-          <img src="http://msudenver.edu/media/assets/homepagespring2016/MSU-Denverlogo_blunav.png"><br><br>
+          <img src="http://sitemanager.msudenver.edu/media/assets/homepagespring2016/msudenver-informal_logo.png"><br><br>
           <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=30947&amp;chid=1&amp;lang=en&amp;ede=true"><small>&copy;</small></a><a><small> MSU Denver -</small></a>
           <a href="/privacy"><small>Privacy, Terms and Conditions</small></a> <br>
           <br>
