--- a/homepage.html
+++ b/homepage.html
@@ -372,7 +372,7 @@ Celebration of MSU Denver's <br>
 <!-- BEGINS  FOOTER -->
 <div class="container-fluid">
     <div class="row footer">
-      <div class="container">
+      <div>
 
         <div class="col-sm-6 col-md-6 col-lg-4 social campus-info mobile-msuinfo-show">
               <p>
@@ -391,7 +391,7 @@ Celebration of MSU Denver's <br>
              </i>
         </div>
 
-        <div class="col-sm-12 col-md-12 col-lg-4 footer-menu">
+        <div class="col-sm-12 col-md-12 col-lg-6 footer-menu">
             <div class="col-sm-6 col-md-6 col-lg-6">
               <p>
                 <a href="/">About</a><br>
@@ -430,7 +430,7 @@ Celebration of MSU Denver's <br>
             </i>
             <br/><br/>
         </div>
-        <div class="col-sm-6 col-md-6 col-lg-4 social campus-info desktop-msuinfo-show">
+        <div class="col-sm-6 col-md-6 col-lg-3 social campus-info desktop-msuinfo-show">
               <p>
                 <a href="/"><strong>Metropolitan State University of Denver</strong></a><br><br>
                 <a href="/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
@@ -447,10 +447,11 @@ Celebration of MSU Denver's <br>
              </i>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 footer-logo">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 footer-logo">
           <img src="http://sitemanager.msudenver.edu/media/assets/homepagespring2016/msudenver-informal_logo.png"><br><br>
           <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=30947&amp;chid=1&amp;lang=en&amp;ede=true"><small>&copy;</small></a><a><small> MSU Denver -</small></a>
           <a href="/privacy"><small>Privacy, Terms and Conditions</small></a> <br>
+          <a href="http://www.collegeportraits.org/CO/MSU_Denver" target="_blank"><small>College Portrait</small></a>
           <br>
         </div>
       </div>
