adds links to footer

--- a/homepage.html
+++ b/homepage.html
@@ -394,29 +394,29 @@ Celebration of MSU Denver's <br>
         <div class="col-sm-12 col-md-12 col-lg-6 footer-menu">
             <div class="col-sm-6 col-md-6 col-lg-6">
               <p>
-                <a href="/">About</a><br>
+                <a href="https://msudenver.edu/about">About</a><br>
                 <hr />
-                <a href="/">Degree Programs</a><br>
+                <a href="https://msudenver.edu/programs">Degree Programs</a><br>
                 <hr/>
-                <a href="/">Cost</a><br>
+                <a href="https://msudenver.edu/admissions/cost/">Cost</a><br>
                 <hr/>
-                <a href="/">Financial Aid</a><br>
+                <a href="https://msudenver.edu/financialaid/">Financial Aid</a><br>
                 <hr/>
-                <a href="/">Bookstore</a>
+                <a href="http://www.tivolistation.com/">Bookstore</a>
                 <hr class="hide-hr"/>
               </p>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-6">
               <p>
-                <a href="/">Tours</a><br>
+                <a href="https://msudenver.edu/admissions/takeatour/ ">Tours</a><br>
                 <hr/>
-                <a href="/">Directions</a><br>
+                <a href="https://msudenver.edu/visit/quickdirections/ ">Directions</a><br>
                 <hr/>
-                <a href="/">Parking</a><br>
+                <a href="javascript:void(0)" onclick="window.open('http://www.myatlascms.com/embed.php?id=225&#39;,&#39;&#39;,&#39;fullscreen=yes,scrollbars=no&#39;)">Parking</a><br>
                 <hr/>
-                <a href="/">Careers</a><br>
+                <a href="https://www.msudenverjobs.com/ ">Careers</a><br>
                 <hr/>
-                <a href="/">Safety</a>
+                <a href="https://msudenver.edu/campussafetyandcrime/">Safety</a>
               </p>
             </div>
             <br/><br/>
@@ -432,8 +432,8 @@ Celebration of MSU Denver's <br>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-3 social campus-info desktop-msuinfo-show">
               <p>
-                <a href="/"><strong>Metropolitan State University of Denver</strong></a><br><br>
-                <a href="/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
+                <a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a><br><br>
+                <a href="https://msudenver.edu/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
                 <a href="tel:303-556-5740"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a><br><br>
                 <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
               </p>
@@ -504,7 +504,7 @@ lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=294
 
 <!-- BEGINS SECOND DEPENDENCY INCLUDE -->
 <!-- sidemenu.js  -->
-<script type="text/javascript" src="https://msudenver.eduhttps://msudenver.edu/media/prod/js/sidemenu.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script>
 <!-- modernizr -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
 <!-- bootstrap.js -->
