fixes instagram broken link on footer

--- a/homepage.html
+++ b/homepage.html
@@ -382,12 +382,12 @@ Celebration of MSU Denver's <br>
                 <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
               </p>
               <i class="social-non-mobile">
-               <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-               <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
-               <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-               <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-               <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
-               <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
+               <a href="https://www.facebook.com/msudenver" target="_blank" id="Footer-Facebook"><i class="fa fa-facebook-square fa-2x"></i></a>
+               <a href="http://twitter.com/msudenver" target="_blank" id="Footer-Twitter"><i class="fa fa-twitter-square fa-2x"></i></a>
+               <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank" id="Footer-Linkedin"><i class="fa fa-linkedin-square fa-2x"></i></a>
+               <a href="https://instagram.com/msu_denver" target="_blank" id="Footer-Instagram"><i class="fa fa-instagram fa-2x"></i></a>
+               <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank" id="Footer-Flickr"><i class="fa fa-flickr fa-2x"></i></a>
+               <a href="http://www.youtube.com/user/msudenver" target="_blank" id="Footer-Youtube"><i class="fa fa-youtube-square fa-2x"></i></a><br>
              </i>
         </div>
 
@@ -424,7 +424,7 @@ Celebration of MSU Denver's <br>
              <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
              <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
              <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-             <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+             <a href="https://instagram.com/msu_denver" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
              <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
              <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
             </i>
@@ -441,7 +441,7 @@ Celebration of MSU Denver's <br>
                <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
                <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
                <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-               <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+               <a href="https://instagram.com/msu_denver" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
                <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
                <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
              </i>
