--- a/homepage.html
+++ b/homepage.html
@@ -377,9 +377,9 @@ Celebration of MSU Denver's <br>
         <div class="col-sm-6 col-md-6 col-lg-4 social campus-info mobile-msuinfo-show">
               <p>
                 <a href="/"><strong>Metropolitan State University of Denver</strong></a><br><br>
-                <a href="/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
-                <a href="tel:303-556-5740"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a><br><br>
-                <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
+                <a href="/maps" id="Footer-Map"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
+                <a href="tel:303-556-5740" id="Footer-Phone"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a><br><br>
+                <a onclick="javascript:OpenLHNChat();return false;" href="#" id="Footer-Chat"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
               </p>
               <i class="social-non-mobile">
                <a href="https://www.facebook.com/msudenver" target="_blank" id="Footer-Facebook"><i class="fa fa-facebook-square fa-2x"></i></a>
@@ -394,23 +394,23 @@ Celebration of MSU Denver's <br>
         <div class="col-sm-12 col-md-12 col-lg-6 footer-menu">
             <div class="col-sm-6 col-md-6 col-lg-6">
               <p>
-                <a href="https://msudenver.edu/about">About</a><br>
+                <a href="https://msudenver.edu/about" id="Footer-About">About</a><br>
                 <hr />
-                <a href="https://msudenver.edu/programs">Degree Programs</a><br>
+                <a href="https://msudenver.edu/programs" id="Footer-DegreePrograms">Degree Programs</a><br>
                 <hr/>
-                <a href="https://msudenver.edu/admissions/cost/">Cost</a><br>
+                <a href="https://msudenver.edu/admissions/cost/" id="Footer-Cost">Cost</a><br>
                 <hr/>
-                <a href="https://msudenver.edu/financialaid/">Financial Aid</a><br>
+                <a href="https://msudenver.edu/financialaid/"id="Footer-FinancialAid">Financial Aid</a><br>
                 <hr/>
-                <a href="http://www.tivolistation.com/">Bookstore</a>
+                <a href="http://www.tivolistation.com/"id="Footer-Bookstore" target="_blank">Bookstore</a>
                 <hr class="hide-hr"/>
               </p>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-6">
               <p>
-                <a href="https://msudenver.edu/admissions/takeatour/ ">Tours</a><br>
+                <a href="https://msudenver.edu/admissions/takeatour/" id="Footer-Tours">Tours</a><br>
                 <hr/>
-                <a href="https://msudenver.edu/visit/quickdirections/ ">Directions</a><br>
+                <a href="https://msudenver.edu/visit/quickdirections/" id="Footer-Directions">Directions</a><br>
                 <hr/>
                 <a href="javascript:void(0)" onclick="window.open('http://www.myatlascms.com/embed.php?id=225&#39;,&#39;&#39;,&#39;fullscreen=yes,scrollbars=no&#39;)">Parking</a><br>
                 <hr/>
