updates naming convention on Privacy Statement

--- a/homepage.html
+++ b/homepage.html
@@ -449,7 +449,8 @@ Celebration of MSU Denver's <br>
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 footer-logo">
           <img src="http://sitemanager.msudenver.edu/media/assets/homepagespring2016/msudenver-informal_logo.png"><br><br>
-          <a href="/privacy"><small>Privacy, Terms and Conditions</small></a> <br>
+          <small>&copy;</small></a><a><small> MSU Denver -</small></a>
+          <a href="/privacy"><small>Privacy Statement</small></a> <br>
           <a href="http://www.collegeportraits.org/CO/MSU_Denver" target="_blank"><small>College Portrait</small></a>
           <br>
         </div>
