fixes link to Parking Map

--- a/homepage.html
+++ b/homepage.html
@@ -412,7 +412,7 @@ Celebration of MSU Denver's <br>
                 <hr/>
                 <a href="https://msudenver.edu/visit/quickdirections/" id="Footer-Directions">Directions</a><br>
                 <hr/>
-                <a href="javascript:void(0)" onclick="window.open('http://www.myatlascms.com/embed.php?id=225&#39;,&#39;&#39;,&#39;fullscreen=yes,scrollbars=no&#39;)">Parking</a><br>
+                <a href="https://myatlascms.com/map/?id=225#!ct/2317?mc/39.74257855991715,-105.0048565864563?z/16" id="Footer-Parking">Parking</a><br>
                 <hr/>
                 <a href="https://www.msudenverjobs.com/ ">Careers</a><br>
                 <hr/>
