updates careers link

--- a/homepage.html
+++ b/homepage.html
@@ -414,7 +414,7 @@ Celebration of MSU Denver's <br>
                 <hr/>
                 <a href="https://myatlascms.com/map/?id=225#!ct/2317?mc/39.74257855991715,-105.0048565864563?z/16" id="Footer-Parking">Parking</a><br>
                 <hr/>
-                <a href="https://www.msudenverjobs.com/" id="Footer-Careers" target="_blank">Careers</a><br>
+                <a href="https://www.msudenverjobs.com/postings/search" id="Footer-Careers" target="_blank">Careers</a><br>
                 <hr/>
                 <a href="https://msudenver.edu/campussafetyandcrime/">Safety</a>
               </p>
