--- a/app/2column.html
+++ b/app/2column.html
@@ -44,7 +44,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" media="screen" href="main2016.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="styles/main2016.css" />
 <link rel="stylesheet" type="text/css" media="print" href="https://msudenver.edu/media/assets/css/print.css" />
 <!-- T4 CSS -->
 <t4 type="media" id="109887"/>
