--- a/app/homepage.html
+++ b/app/homepage.html
@@ -27,7 +27,7 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" media="screen" href="home2016.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="styles/home2016.css" />
 
 
 
