removes mainBlueNavigation to be replaced for global nav

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -13,7 +13,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Metropolitan State University of Denver</title>
 <meta name="Description" content="Metropolitan State University of Denver is a fully accredited university offering various bachelor's and master's degrees in downtown Denver, Colorado.">
 <!-- Meta Data -->
@@ -63,101 +62,85 @@
 
 <h1 class='hidden'>Metropolitan State University of Denver</h1>
 <!-- BEGINS LOGO + QUICK-LINKS -->
+
+<!-- *********************************  -->
+<!-- Global Header STARTS HERE -->
+<!-- *********************************  -->
 <div class="container-fluid">
         <!-- QUICKLINKS TOOLBAR -->
             <div class="navbar navbar-static-top toolbar">
-                <div class="navbar-header">
+                <div class="navbar-header col-xs-12">
                    <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle quick links navigation</span>
                         <span class="fa fa-bars"></span>
                     </button>
                     <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu/media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
-
+                    <img class="msudenver_logo hidden-sm" src="https://msudenver.edu/media/assets/homepagespring2016/MSU-Denverlogo_white.png" alt="MSU Denver Logo">
                 </div>
 
                 <div class="navbar-collapse collapse">
-
-                  <div class="col-xs-12 col-md-6 col-lg-6">
                     <ul class="nav navbar-nav navbar-center">
-                      <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
-                      <li class="quicktools"><a href="/facstaff">Faculty & Staff</a></li>
-                      <li class="quicktools"><a href="http://library.auraria.edu">Library</a></li>
-                      <li class="quicktools"><a href="/giving">Support Us</a></li>
-                      <li class="quicktools"><a href="/maps">Maps</a></li>
-
+                      <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg">
+                        <li><a href="/admissions">ADMISSIONS</a></li>
+                        <li><a href="/academics">ACADEMICS</a></li>
+                        <li><a href="/campuslife">CAMPUS LIFE </a></li>
+                        <li><a href="http://gometrostate.com/">ATHLETICS</a></li>
+                        <li><a href="/studenthub"><strong>Student Hub</strong></a></li>
+                        <li><a href="/alumni">ALUMNI &#38; FRIENDS</a></li>
+                        <li><a href="/facstaff">Faculty &#38; Staff</a></li>
+                      </ul>
                   	</ul>
-                  </div>
 
-                  <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                        <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
-                          <div class="input-group">
-                            <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
-							<input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
-							<input type="hidden" name="ie" value="UTF-8" class="form-control" placeholder="Search">
-						    <label for="q" class="sr-only">Search MSU Denver site</label>
-                            <input type="text" id="q" class="form-control"  name="q"  placeholder="Search MSU Denver" size="30">
-                          	<span class="input-group-btn">
-                              <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
-                            </span>
-                           </div>
-						</form>
-                     </div>
+                   <ul class="nav navbar-nav navbar-center hidden-xs">
+                     <li class="dropdown">
+                          <a href="/about">ABOUT <b class="caret"></b></a>
+                          <ul class="dropdown-menu"><li><a href="/factsheet/">MSU Denver at a glance</a></li><li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li><li><a href="/trustees/">Board of Trustees</a></li><li><a href="/working/">Employment</a></li><li><a href="http://www.msudenver.edu/events">Events Calendar</a></li><li><a href="/giving/">The Foundation - Giving to MSU Denver</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/newsroom/">Newsroom</a></li><li><a href="/president/">President</a></li><li><a href="/50/">Our Past</a></li><li><a href="/contact/">Questions / Comments</a></li><li><a href="/visit/">Visit MSU Denver</a></li></ul>
+                      </li>
 
-                        <section class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nav navbar-nav nav-social text-center">
-                        <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square"></i></a>
-						<a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square"></i></a>
-                        <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-                      	<a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram"></i></a>
-						<a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr"></i></a>
-                        <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square"></i></a>
-                        </section>
+                      <li class="dropdown">
+                        <a href="/academics">ACADEMICS <b class="caret"></b></a>
+                          <ul class="dropdown-menu"><li><a href="/academics/academicresources/">Academic Resources</a></li><li><a href="/fys/">First Year Success</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/a-to-z/majors.shtml">Majors &amp; Minors</a></li><li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li><li><a href="/academics/specialprograms/">Special Programs</a></li><li><a href="/las/">College of Letters, Arts and Sciences</a></li><li><a href="/business/">College of Business</a></li><li><a href="/cps/">College of Professional Studies</a></li><li><a href="/education/">School of Education</a></li></ul>
+                      </li>
 
-                              <div class="col-xs-12  mainBlueNavigation">
-                          <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg">
-                             <li><a href="/about">ABOUT </a></li>
-                             <li><a href="/academics">ACADEMICS</a></li>
-                           	 <li><a href="/admissions">ADMISSIONS</a></li>
-                             <li><a href="/campuslife">CAMPUS LIFE </a></li>
-                    		 <li><a href="/alumni">ALUMNI &#38; FRIENDS</a></li>
-                    		 <li><a href="http://gometrostate.com/">ATHLETICS</a></li>
-     					  </ul>
-
-                           <ul class="nav navbar-nav navbar-center hidden-xs">
-                              <li class="msudenver_logo hidden-sm">
-              					<img src="https://msudenver.edu/media/assets/homepagespring2016/MSU-Denverlogo_white.png" alt="MSU Denver Logo">
-		      				  </li>
-                             <li class="dropdown">
-                                  <a href="/about">ABOUT <b class="caret"></b></a>
-                                  <ul class="dropdown-menu"><li><a href="/factsheet/">MSU Denver at a glance</a></li><li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li><li><a href="/trustees/">Board of Trustees</a></li><li><a href="/working/">Employment</a></li><li><a href="http://www.msudenver.edu/events">Events Calendar</a></li><li><a href="/giving/">The Foundation - Giving to MSU Denver</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/newsroom/">Newsroom</a></li><li><a href="/president/">President</a></li><li><a href="/50/">Our Past</a></li><li><a href="/contact/">Questions / Comments</a></li><li><a href="/visit/">Visit MSU Denver</a></li></ul>
-                              </li>
-
-                              <li class="dropdown">
-                                <a href="/academics">ACADEMICS <b class="caret"></b></a>
-                                  <ul class="dropdown-menu"><li><a href="/academics/academicresources/">Academic Resources</a></li><li><a href="/fys/">First Year Success</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/a-to-z/majors.shtml">Majors &amp; Minors</a></li><li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li><li><a href="/academics/specialprograms/">Special Programs</a></li><li><a href="/las/">College of Letters, Arts and Sciences</a></li><li><a href="/business/">College of Business</a></li><li><a href="/cps/">College of Professional Studies</a></li><li><a href="/education/">School of Education</a></li></ul>
-                              </li>
-
-                              <li class="dropdown">
-                        			<a href="/admissions">ADMISSIONS <b class="caret"></b></a>
-                        		<ul class="dropdown-menu"><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
-                    		</li>
-                            <li class="dropdown">
-                                <a href="/campuslife">CAMPUS LIFE <b class="caret"></b></a>
-                                <ul class="dropdown-menu"><li><a href="/asa/">Academic and Student Affairs</a></li><li><a href="/campuslife/academicsupport/">Academic Support</a></li><li><a href="/events/">Events &amp; Calendars</a></li><li><a href="/admissions/cost/">Cost</a></li><li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li><li><a href="/campuslife/helpfulresources/">Helpful Resources</a></li><li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li><li><a href="/studentactivities/">Student Activities</a></li><li><a href="/studentengagementandwellness/">Student Engagement and Wellness</a></li><li><a href="/campuslife/studentpublications/">Student Media</a></li></ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="/alumni">ALUMNI &#38; FRIENDS <b class="caret"></b></a>
-                                <ul class="dropdown-menu"><li><a href="/alumni/contactus/">Contact Us</a></li><li><a href="/alumni/careerservices/">Career Services</a></li><li><a href="/alumni/events/">Events</a></li><li><a href="/alumni/continuingeducation/">Continuing Education</a></li><li><a href="/alumni/studentalumniassociation/">Student Alumni Association</a></li><li><a href="/alumni/give/">Give</a></li><li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li></ul>
-                            </li>
-                            <li>
-                                <a href="http://gometrostate.com/">ATHLETICS</a>
-                            </li>
-                          </ul>
+                      <li class="dropdown">
+                			<a href="/admissions">ADMISSIONS <b class="caret"></b></a>
+                		<ul class="dropdown-menu"><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
+            		</li>
+                    <li class="dropdown">
+                        <a href="/campuslife">CAMPUS LIFE <b class="caret"></b></a>
+                        <ul class="dropdown-menu"><li><a href="/asa/">Academic and Student Affairs</a></li><li><a href="/campuslife/academicsupport/">Academic Support</a></li><li><a href="/events/">Events &amp; Calendars</a></li><li><a href="/admissions/cost/">Cost</a></li><li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li><li><a href="/campuslife/helpfulresources/">Helpful Resources</a></li><li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li><li><a href="/studentactivities/">Student Activities</a></li><li><a href="/studentengagementandwellness/">Student Engagement and Wellness</a></li><li><a href="/campuslife/studentpublications/">Student Media</a></li></ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="/alumni">ALUMNI &#38; FRIENDS <b class="caret"></b></a>
+                        <ul class="dropdown-menu"><li><a href="/alumni/contactus/">Contact Us</a></li><li><a href="/alumni/careerservices/">Career Services</a></li><li><a href="/alumni/events/">Events</a></li><li><a href="/alumni/continuingeducation/">Continuing Education</a></li><li><a href="/alumni/studentalumniassociation/">Student Alumni Association</a></li><li><a href="/alumni/give/">Give</a></li><li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li></ul>
+                    </li>
+                    <li>
+                        <a href="http://gometrostate.com/">ATHLETICS</a>
+                    </li>
+                  </ul>
+                          <div class="">
+                                <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
+                                  <div class="input-group">
+                                    <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
+                      <input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
+                      <input type="hidden" name="ie" value="UTF-8" class="form-control" placeholder="Search">
+                        <label for="q" class="sr-only">Search MSU Denver site</label>
+                                    <input type="text" id="q" class="form-control"  name="q"  placeholder="Search MSU Denver" size="30">
+                                    <span class="input-group-btn">
+                                      <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
+                                    </span>
+                                   </div>
+                    </form>
+                             </div>
                         </div>
                 </div>
                 <!--/.nav-collapse -->
             </div>
 </div>
 
+<!-- *********************************  -->
+<!-- Global Header ENDS HERE -->
+<!-- *********************************  -->
 
     <!-- *********************************  -->
     <!-- SITEMANAGER HEADER ENDS HERE -->
