--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
 
     <a href="2column.html">2 Column </a>
 
+    <!-- inject:head:html -->
+     <!-- contents of html partials will be injected here -->
+     <!-- endinject -->
 </body>
 
 </html>
