--- a/app/homepage.html
+++ b/app/homepage.html
@@ -67,75 +67,94 @@
 <!-- Global Header STARTS HERE -->
 <!-- *********************************  -->
 <div class="container-fluid">
-        <!-- QUICKLINKS TOOLBAR -->
-            <div class="navbar navbar-static-top toolbar">
-                <div class="navbar-header col-xs-12">
-                   <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle quick links navigation</span>
-                        <span class="fa fa-bars"></span>
-                    </button>
-                    <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu/media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
-                    <img class="msudenver_logo hidden-sm" src="https://msudenver.edu/media/assets/homepagespring2016/MSU-Denverlogo_white.png" alt="MSU Denver Logo">
-                </div>
+<!-- QUICKLINKS TOOLBAR -->
+  <div class="navbar navbar-static-top toolbar">
+    <div class="navbar-header col-xs-12">
+        <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle quick links navigation</span>
+          <span class="fa fa-bars"></span>
+        </button>
+        <div class="col-xs-2">
+        </div>
+        <div class="col-xs-7">
+          <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu/media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
+          <img class="msudenver_logo hidden-sm" src="https://msudenver.edu/media/assets/homepagespring2016/MSU-Denverlogo_white.png" alt="MSU Denver Logo">
+        </div>
+        <div class="col-xs-2" style="background: #d11242; color: white; font-size:25px; border-radius: 0px 0px 10px 10px; text-align: center; padding: 20px 15px 25px 15px; width: 13%;"><strong>APPLY NOW</strong>
+        </div>
+        <div class="col-xs-1">
+        </div>
+    </div>
 
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-center">
-                      <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg">
-                        <li><a href="/admissions">ADMISSIONS</a></li>
-                        <li><a href="/academics">ACADEMICS</a></li>
-                        <li><a href="/campuslife">CAMPUS LIFE </a></li>
-                        <li><a href="http://gometrostate.com/">ATHLETICS</a></li>
-                        <li><a href="/studenthub"><strong>Student Hub</strong></a></li>
-                        <li><a href="/alumni">ALUMNI &#38; FRIENDS</a></li>
-                        <li><a href="/facstaff">Faculty &#38; Staff</a></li>
-                      </ul>
-                  	</ul>
+    <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-center">
+            <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg">
+              <li><a href="/admissions">ADMISSIONS</a></li>
+              <li><a href="/academics">ACADEMICS</a></li>
+              <li><a href="/campuslife">CAMPUS LIFE </a></li>
+              <li><a href="http://gometrostate.com/">ATHLETICS</a></li>
+              <li><a href="/studenthub"><strong>Student Hub</strong></a></li>
+              <li><a href="/alumni">ALUMNI &#38; FRIENDS</a></li>
+              <li><a href="/facstaff">Faculty &#38; Staff</a></li>
+            </ul>
+        	</ul>
 
-                   <ul class="nav navbar-nav navbar-center hidden-xs">
-                     <li class="dropdown">
-                          <a href="/about">ABOUT <b class="caret"></b></a>
-                          <ul class="dropdown-menu"><li><a href="/factsheet/">MSU Denver at a glance</a></li><li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li><li><a href="/trustees/">Board of Trustees</a></li><li><a href="/working/">Employment</a></li><li><a href="http://www.msudenver.edu/events">Events Calendar</a></li><li><a href="/giving/">The Foundation - Giving to MSU Denver</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/newsroom/">Newsroom</a></li><li><a href="/president/">President</a></li><li><a href="/50/">Our Past</a></li><li><a href="/contact/">Questions / Comments</a></li><li><a href="/visit/">Visit MSU Denver</a></li></ul>
-                      </li>
+         <ul class="nav navbar-nav navbar-center hidden-xs" style="font-size: 14px; color: #00447c">
+           <li class="dropdown">
+           <a href="/admissions">ADMISSIONS <b class="caret"></b></a>
+             <ul class="dropdown-menu"><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
+           </li>
 
-                      <li class="dropdown">
-                        <a href="/academics">ACADEMICS <b class="caret"></b></a>
-                          <ul class="dropdown-menu"><li><a href="/academics/academicresources/">Academic Resources</a></li><li><a href="/fys/">First Year Success</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/a-to-z/majors.shtml">Majors &amp; Minors</a></li><li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li><li><a href="/academics/specialprograms/">Special Programs</a></li><li><a href="/las/">College of Letters, Arts and Sciences</a></li><li><a href="/business/">College of Business</a></li><li><a href="/cps/">College of Professional Studies</a></li><li><a href="/education/">School of Education</a></li></ul>
-                      </li>
+           <li class="dropdown">
+             <a href="/academics">ACADEMICS <b class="caret"></b></a>
+               <ul class="dropdown-menu"><li><a href="/academics/academicresources/">Academic Resources</a></li><li><a href="/fys/">First Year Success</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/a-to-z/majors.shtml">Majors &amp; Minors</a></li><li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li><li><a href="/academics/specialprograms/">Special Programs</a></li><li><a href="/las/">College of Letters, Arts and Sciences</a></li><li><a href="/business/">College of Business</a></li><li><a href="/cps/">College of Professional Studies</a></li><li><a href="/education/">School of Education</a></li></ul>
+           </li>
 
-                      <li class="dropdown">
-                			<a href="/admissions">ADMISSIONS <b class="caret"></b></a>
-                		<ul class="dropdown-menu"><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
-            		</li>
-                    <li class="dropdown">
-                        <a href="/campuslife">CAMPUS LIFE <b class="caret"></b></a>
-                        <ul class="dropdown-menu"><li><a href="/asa/">Academic and Student Affairs</a></li><li><a href="/campuslife/academicsupport/">Academic Support</a></li><li><a href="/events/">Events &amp; Calendars</a></li><li><a href="/admissions/cost/">Cost</a></li><li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li><li><a href="/campuslife/helpfulresources/">Helpful Resources</a></li><li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li><li><a href="/studentactivities/">Student Activities</a></li><li><a href="/studentengagementandwellness/">Student Engagement and Wellness</a></li><li><a href="/campuslife/studentpublications/">Student Media</a></li></ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="/alumni">ALUMNI &#38; FRIENDS <b class="caret"></b></a>
-                        <ul class="dropdown-menu"><li><a href="/alumni/contactus/">Contact Us</a></li><li><a href="/alumni/careerservices/">Career Services</a></li><li><a href="/alumni/events/">Events</a></li><li><a href="/alumni/continuingeducation/">Continuing Education</a></li><li><a href="/alumni/studentalumniassociation/">Student Alumni Association</a></li><li><a href="/alumni/give/">Give</a></li><li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li></ul>
-                    </li>
-                    <li>
-                        <a href="http://gometrostate.com/">ATHLETICS</a>
-                    </li>
-                  </ul>
-                          <div class="">
-                                <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
-                                  <div class="input-group">
-                                    <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
+           <li class="dropdown">
+             <a href="/campuslife">CAMPUS LIFE <b class="caret"></b></a>
+             <ul class="dropdown-menu"><li><a href="/asa/">Academic and Student Affairs</a></li><li><a href="/campuslife/academicsupport/">Academic Support</a></li><li><a href="/events/">Events &amp; Calendars</a></li><li><a href="/admissions/cost/">Cost</a></li><li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li><li><a href="/campuslife/helpfulresources/">Helpful Resources</a></li><li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li><li><a href="/studentactivities/">Student Activities</a></li><li><a href="/studentengagementandwellness/">Student Engagement and Wellness</a></li><li><a href="/campuslife/studentpublications/">Student Media</a></li></ul>
+           </li>
+
+           <li>
+             <a href="http://gometrostate.com/">ATHLETICS </a>
+           </li>
+
+           <li>
+             <a href="http://msudenver.edu/studenthub">STUDENT HUB </a>
+           </li>
+
+           <li class="dropdown">
+             <a href="/alumni">ALUMNI &#38; FRIENDS <b class="caret"></b></a>
+             <ul class="dropdown-menu"><li><a href="/alumni/contactus/">Contact Us</a></li><li><a href="/alumni/careerservices/">Career Services</a></li><li><a href="/alumni/events/">Events</a></li><li><a href="/alumni/continuingeducation/">Continuing Education</a></li><li><a href="/alumni/studentalumniassociation/">Student Alumni Association</a></li><li><a href="/alumni/give/">Give</a></li><li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li></ul>
+           </li>
+
+
+            <li class="dropdown">
+                <a href="/about">FACULTY &#38; STAFF <b class="caret"></b></a>
+                <ul class="dropdown-menu"><li><a href="/factsheet/">MSU Denver at a glance</a></li><li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li><li><a href="/trustees/">Board of Trustees</a></li><li><a href="/working/">Employment</a></li><li><a href="http://www.msudenver.edu/events">Events Calendar</a></li><li><a href="/giving/">The Foundation - Giving to MSU Denver</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/newsroom/">Newsroom</a></li><li><a href="/president/">President</a></li><li><a href="/50/">Our Past</a></li><li><a href="/contact/">Questions / Comments</a></li><li><a href="/visit/">Visit MSU Denver</a></li></ul>
+            </li>
+
+
+
+        </ul>
+            <div class="">
+                <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
+                    <div class="input-group">
+                      <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
                       <input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
                       <input type="hidden" name="ie" value="UTF-8" class="form-control" placeholder="Search">
-                        <label for="q" class="sr-only">Search MSU Denver site</label>
-                                    <input type="text" id="q" class="form-control"  name="q"  placeholder="Search MSU Denver" size="30">
-                                    <span class="input-group-btn">
-                                      <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
-                                    </span>
-                                   </div>
-                    </form>
-                             </div>
-                        </div>
-                </div>
-                <!--/.nav-collapse -->
+                      <label for="q" class="sr-only">Search MSU Denver site</label>
+                      <input type="text" id="q" class="form-control"  name="q"  placeholder="Search MSU Denver" size="30">
+                      <span class="input-group-btn">
+                        <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
+                      </span>
+                    </div>
+                </form>
             </div>
+    </div>
+  </div>
+      <!--/.nav-collapse -->
+</div>
 </div>
 
 <!-- *********************************  -->
@@ -146,79 +165,9 @@
     <!-- SITEMANAGER HEADER ENDS HERE -->
     <!-- *********************************  -->
 
-<!-- navigation object : 2016 - Homepage Slideshow --><div class="container-fluid">
-<div id="carousel-homepage" class="carousel slide" data-ride="carousel">
+<!-- navigation object : 2016 - Homepage Slideshow -->
 
-
-  <div class="carousel-inner" role="listbox"><div class="item active">
-  <a href="/spotlight/diversity/">
-  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160627-diversity2.jpg" alt="MSU Denver, diversity, Insight into Diversity," style="   " />
-      <div class="carousel-caption Not Set">
-      <h2>Diversity Champion</h2>
-       <h3>MSU Denver is honored for an unyielding commitment to diversity and inclusion.  </h3>
-       <div class="caption-readmore"><hr>Read More <i class="fa fa-angle-right"></i></div>
-	</div>
-    </a>
-</div>
-  <!-- Version7.0 --><div class="item Not Set">
-  <a href="/giving/waystogive/strategicinitiatives/aerospaceandengineeringsciences/">
-  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160627-AES.jpg" alt="Rendering of MSU Denver's new Aerospace Engineering Sciences Building. " style="   " />
-      <div class="carousel-caption Not Set">
-      <h2>Prepare for the Future</h2>
-       <h3>In 2017, MSU Denver STEM students can launch their careers from our new Aerospace and Engineering Sciences Building.</h3>
-       <div class="caption-readmore"><hr>Read More <i class="fa fa-angle-right"></i></div>
-	</div>
-    </a>
-</div>
-  <!-- Version5.0 --><div class="item Not Set">
-  <a href="http://www.msudenver.edu/magazine/storyarchive/spring-2016/music-man.shtml?utm_source=uhomepage&utm_medium=carousel&utm_content=donbyron&utm_campaign=uhomepagelinks">
-  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160525_Byron.jpg" alt="Image of MSU Denver music professor Don Byron" style="   " />
-      <div class="carousel-caption caption-reverse">
-      <h2>Learn from a master</h2>
-       <h3>Jazz virtuoso Don Byron brings excellence to the bandstand and the classroom.</h3>
-       <div class="caption-readmore"><hr>Read More <i class="fa fa-angle-right"></i></div>
-	</div>
-    </a>
-</div>
-  <!-- Version3.0 --><div class="item Not Set">
-  <a href="http://www.msudenver.edu/soiree/?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=eventsummersoiree&utm_campaign=50thanniversary">
-  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160408_50th-soiree.jpg" alt="A night that celebrates 50 years of excellence at Metropolitan State University of Denver. All proceeds benefit undergraduate scholarships." style="   " />
-      <div class="carousel-caption Not Set">
-      <h2>Summer Soirée | June 4, 2016</h2>
-       <h3>A night that celebrates 50 years of excellence at Metropolitan State University of Denver. All proceeds benefit undergraduate student scholarships.</h3>
-       <div class="caption-readmore"><hr>Read More <i class="fa fa-angle-right"></i></div>
-	</div>
-    </a>
-</div>
-  <!-- Version1.0 --><div class="item Not Set">
-  <a href="http://roadrunnersathletics.com/sports/2016/1/7/SpringSportsFestival.aspx?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=eventsportsfestival&utm_c">
-  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/SpringsSportsFestival04-25v2-28.jpg" alt="Spring Sports Festival Update" style="   " />
-      <div class="carousel-caption caption-reverse">
-      <h2>Share the Experience</h2>
-       <h3>MSU Denver will host the 2016 NCAA Division II Spring Sports Festival. Volunteer for this one-of-a-kind event on our campus in downtown Denver or attend the games. </h3>
-       <div class="caption-readmore"><hr>Read More <i class="fa fa-angle-right"></i></div>
-	</div>
-    </a>
-</div>
-  <!-- Version1.0 --></div>
-
-<!-- Controls -->
-  <a class="left carousel-control" href="#carousel-homepage" role="button" data-slide="prev">
-     <span class="fa-stack fa-lg">
-     <i class="fa fa-circle fa-stack-2x"></i>
-     <i class="fa fa-angle-left fa-stack-1x fa-inverse"></i>
-    </span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-homepage" role="button" data-slide="next">
-   <span class="fa-stack fa-lg">
-     <i class="fa fa-circle fa-stack-2x"></i>
-     <i class="fa fa-angle-right fa-stack-1x fa-inverse"></i>
-    </span>
-<span class="sr-only">Next</span>
-  </a>
-</div>
-</div>
+<!-- REMOVED TEMPORARILY WHILE CODING HEADER -->
 
                           <!-- BEGINS NEWS AND CALENDAR SECTION-->
 <div class="container-fluid items-container">
